[package]
name = "watcher"
version = "0.1.0"
authors = ["DEVICARUS <devicarus@omg.lol>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
dotenv = "0.15.0"
serde = "1.0"
serde_yaml = "0.8"
lazy_static = "1.4.0"